--- a/package.json
+++ b/package.json
@@ -21,9 +21,17 @@
   },
   "homepage": "https://github.com/FujaTyping/Futami#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "@distube/deezer": "^1.0.0",
+    "@distube/soundcloud": "^1.3.3",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
     "@sapphire/framework": "^4.6.0",
     "discord.js": "^14.13.0",
+    "distube": "^4.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sodium": "^3.0.2"
   }
 }
