--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
     "@sapphire/framework": "^4.6.0",
+    "axios": "^1.5.1",
     "discord.js": "^14.13.0",
     "distube": "^4.1.0",
     "dotenv": "^16.3.1",
