--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
     "prefix": "f.",
     "color": 8360658,
-    "owner": "729556554491232256"
+    "owner": "729556554491232256",
+    "debug": false
 }
