--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
-    "libsodium-wrappers": "^0.7.13"
+    "libsodium-wrappers": "^0.7.13",
+    "node-opus": "^0.3.3",
+    "opusscript": "^0.0.8"
   }
 }
