--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "distube": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.13",
     "node-opus": "^0.3.3",
-    "opusscript": "^0.0.8"
+    "opusscript": "^0.0.8",
+    "ytdl-core": "^4.11.5"
   }
 }
