--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node src/index.js"
   },
   "engines": {
-    "node": ">18.18.0",
-    "npm": ">10.1.0"
+    "node": "<=20.9.0",
+    "npm": ">10.2.1"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "libsodium-wrappers": "^0.7.13",
     "node-opus": "^0.3.3",
     "opusscript": "^0.0.8",
+    "punycode.js": "^2.3.0",
     "ytdl-core": "^4.11.5"
   }
 }
