--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Imagine music bot",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "pm2 start src/index.js"
   },
   "engines": {
     "node": "<=20.9.0",
@@ -38,6 +38,7 @@
     "libsodium-wrappers": "^0.7.13",
     "node-opus": "^0.3.3",
     "opusscript": "^0.0.8",
+    "pm2": "^5.3.0",
     "punycode.js": "^2.3.0",
     "ytdl-core": "^4.11.5"
   }
