--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "libsodium-wrappers": "^0.7.13",
     "node-opus": "^0.3.3",
     "opusscript": "^0.0.8",
-    "pm2": "^5.3.0",
     "punycode.js": "^2.3.0",
     "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "pm2": "^5.3.0"
   }
 }
