--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
     "prefix": "f.",
     "color": 4025772,
+    "colorHex": "#3d6dac" ,
     "owner": "729556554491232256",
     "debug": false
 }
