Update deps and Songkharn theme

--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "f.",
-    "color": 4025772,
-    "colorHex": "#3d6dac" ,
+    "color": 2634586,
+    "colorHex": "#28335a" ,
     "owner": "729556554491232256",
     "debug": false
 }
