--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
+    "name": "Futami",
     "prefix": "f.",
     "color": 2634586,
-    "colorHex": "#28335a" ,
+    "colorHex": "#28335a",
     "owner": "729556554491232256",
     "debug": false
 }
