--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@distube/yt-dlp": "^1.1.3",
     "@sapphire/framework": "^4.6.0",
     "axios": "^1.5.1",
+    "discord-gamecord": "^4.4.1",
     "discord.js": "^14.13.0",
     "distube": "^4.0.3",
     "dotenv": "^16.3.1",
