--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@distube/soundcloud": "^1.3.3",
     "@distube/spotify": "^1.6.0",
     "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytsr": "^2.0.0",
     "@sapphire/framework": "^5.1.0",
     "axios": "^1.6.8",
     "discord-gamecord": "^4.4.2",
