--- a/src/config.json
+++ b/src/config.json
@@ -4,6 +4,7 @@
     "color": 4347553,
     "colorHex": "#28335a",
     "owner": "729556554491232256",
+    "port": 6947,
     "ssl": false,
     "debug": false
 }
