--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Futami",
     "prefix": "f.",
+    "ChatEndpoint": "https://api.opentyphoon.ai/v1/chat/completions",
     "color": 4347553,
     "colorHex": "#28335a",
     "owner": "729556554491232256",
