Rework bot profile and , and colors

--- a/src/config.json
+++ b/src/config.json
@@ -2,8 +2,8 @@
     "name": "Futami",
     "prefix": "f.",
     "ChatEndpoint": "https://api.opentyphoon.ai/v1/chat/completions",
-    "color": 4347553,
-    "colorHex": "#28335a",
+    "color": 7453402,
+    "colorHex": "#71BADA",
     "owner": "729556554491232256",
     "port": 6947,
     "ssl": false,
