--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "pm2 start src/index.js"
   },
   "engines": {
-    "node": "<=20.12.2",
-    "npm": ">10.5.2"
+    "node": ">=21.7.3",
+    "npm": ">=10.7.0"
   },
   "repository": {
     "type": "git",
