--- a/src/config.json
+++ b/src/config.json
@@ -14,6 +14,7 @@
     "default": {
         "success": "✅",
         "warning": "⚠️",
+        "failed": "❌",
         "error": "❌"
     },
     "server": {
