Add Welcome / GoodBye Messgae

--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,7 @@
         "name": "Futami",
         "prefix": "f.",
         "owner": "729556554491232256",
+        "systemchannel": "1015645355406278679",
         "mobile": false,
         "debug": false
     },
