--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@distube/spotify": "^1.6.0",
     "@distube/yt-dlp": "^1.1.3",
     "@distube/ytsr": "^2.0.0",
+    "@napi-rs/canvas": "^0.1.52",
     "@sapphire/framework": "^5.1.0",
     "axios": "^1.6.8",
     "canvas": "^2.11.2",
