--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
   "homepage": "https://github.com/FujaTyping/Futami#readme",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.1",
-    "@distube/deezer": "^1.1.0",
-    "@distube/soundcloud": "^1.3.3",
-    "@distube/spotify": "^1.6.0",
-    "@distube/yt-dlp": "^1.1.3",
-    "@distube/ytsr": "^2.0.0",
-    "@napi-rs/canvas": "^0.1.52",
-    "@sapphire/framework": "^5.1.0",
-    "axios": "^1.6.8",
+    "@discordjs/voice": "^0.17.0",
+    "@distube/deezer": "^2.0.1",
+    "@distube/soundcloud": "^2.0.1",
+    "@distube/spotify": "^2.0.2",
+    "@distube/youtube": "^1.0.2",
+    "@distube/yt-dlp": "^2.0.1",
+    "@distube/ytsr": "^2.0.4",
+    "@napi-rs/canvas": "^0.1.53",
+    "@sapphire/framework": "^5.2.1",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "discord-gamecord": "^4.4.2",
-    "discord.js": "^14.14.1",
-    "distube": "^4.1.1",
+    "discord.js": "^14.15.3",
+    "distube": "^5.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
@@ -45,6 +46,6 @@
   },
   "devDependencies": {
     "husky": "^9.0.11",
-    "pm2": "^5.3.1"
+    "pm2": "^5.4.0"
   }
 }
