--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.17.0",
     "@distube/deezer": "^2.0.1",
-    "@distube/soundcloud": "^2.0.1",
+    "@distube/soundcloud": "^2.0.3",
     "@distube/spotify": "^2.0.2",
     "@distube/youtube": "^1.0.2",
     "@distube/yt-dlp": "^2.0.1",
+    "@distube/ytdl-core": "^4.13.5",
     "@distube/ytsr": "^2.0.4",
     "@napi-rs/canvas": "^0.1.53",
     "@sapphire/framework": "^5.2.1",
@@ -40,13 +41,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ffmpeg": "^0.0.4",
-    "libsodium-wrappers": "^0.7.13",
+    "libsodium-wrappers": "^0.7.14",
     "opusscript": "^0.1.1",
     "punycode.js": "^2.3.1",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "husky": "^9.0.11",
-    "pm2": "^5.4.0"
+    "pm2": "^5.4.2"
   }
 }
