--- a/src/config.json
+++ b/src/config.json
@@ -13,10 +13,11 @@
         "colorHex": "#71BADA"
     },
     "default": {
-        "success": "✅",
-        "warning": "⚠️",
-        "failed": "❌",
-        "error": "❌"
+        "success": "<:FutamiSuccess:1241018392283185275>",
+        "mutedwarning": "<:MutedWarning:1262418805070495794>",
+        "warning": "<:Warning:1242110718392799343>",
+        "failed": "<:Failed:1242110812840267949>",
+        "error": "<:Error:1242110763254943804>"
     },
     "server": {
         "port": 6947,
