--- a/src/config.json
+++ b/src/config.json
@@ -15,7 +15,7 @@
     "default": {
         "success": "<:FutamiSuccess:1241018392283185275>",
         "mutedwarning": "<:MutedWarning:1262418805070495794>",
-        "warning": "<:Warning:1242110718392799343>",
+        "warning": "<:MutedWarning:1262429639972753479>",
         "failed": "<:Failed:1242110812840267949>",
         "error": "<:Error:1242110763254943804>"
     },
