--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "pm2 start src/index.js",
+    "bot": "node src/index.js",
     "dev": "live-server service/main/ --port=6947"
   },
   "engines": {
