--- a/src/config.json
+++ b/src/config.json
@@ -13,11 +13,11 @@
         "colorHex": "#71BADA"
     },
     "default": {
-        "success": "<:FutamiSuccess:1241018392283185275>",
-        "mutedwarning": "<:MutedWarning:1262418805070495794>",
-        "warning": "<:MutedWarning:1262429639972753479>",
-        "failed": "<:Failed:1242110812840267949>",
-        "error": "<:Error:1242110763254943804>"
+        "success": "<:checked:1264477406035447848>",
+        "mutedwarning": "<:mutedwarning:1264497475247542272>",
+        "warning": "<:warning:1264477331192287294>",
+        "failed": "<:failed:1264477377212452864>",
+        "error": "<:error:1264477391938650114>"
     },
     "server": {
         "port": 6947,
